# PFC-Exp-GUI

./: .gitignore  CMakeLists.txt  README.md  misfit_uniform_time_seed_fftw_early.cpp  misfit_uniform_time_seed_fftw_early_overview.md  vcpkg.json
.github/workflows/: build-and-package.yml  build-and-release.yml
docs/: MID-Nano-Guide.md  MID-Nano-Roadmap.md  changes_0.2.3-0.3.8.md  context-compressed-2026-04-04.md  gui_tabs.md  ref-models-analysis-2026-04-04.md  usage.md
packaging/linux/: mid-nano.desktop  qt-experiment-runner.desktop
packaging/windows/: installer.nsi
scripts/: build_macos.sh  build_windows.ps1  install_ubuntu_24.04.sh  package-linux.sh  package_deb.sh  package_macos.sh  package_windows.ps1  publish_release.sh
src/experiment/: cvd.cpp  elastic.cpp  main_cli.cpp  misfit_uniform_time_seed_fftw_early.cpp  pfc_common.h
src/gui/: ExperimentController.cpp  ExperimentController.h  MainWindow.cpp  MainWindow.h  PlotWidget.cpp  PlotWidget.h  RunQueueModel.cpp  RunQueueModel.h  main.cpp  resources.qrc  windows_icon.rc
src/gui/qml/: Main.qml
src/launcher/: windows_icon.rc  windows_launcher.cpp
